CHANGES
-------
Version 0.10 : In Progress
--------------------------
09/03/2019 Removed the experimental aside() functionality.  Too much 
           magic.  Better left to others.

09/03/2019 Removed the gather() function.  Use TaskGroup instead.

09/03/2019 Removed get_all_tasks() function.

09/03/2019 Removed the Task.pdb() method.

09/03/2019 Removed the Task.interrupt() method.

09/03/2019 The pointless (and completely unused) name argument to TaskGroup() 
           has been removed. 

08/09/2019 Exceptions raised inside the Curio kernel itself are no longer 
           reported to tasks.  Instead, they cause Curio to die. The
           kernel is never supposed to raise exceptions on its own--any
           exception that might be raised is an internal programming error.
           This change should not impact user-level code, but might affect
           uncontrolled Ctrl-C handling. If a KeyboardInterrupt occurs
           in the middle of kernel-level code, it will cause an uncontrolled
           death. If this actually matters to you, then modify your code to
           properly handle Ctrl-C via signal handling.

04/14/2019 The Channel.connect() method no longer implements auto-retry. 
           In practice, this kind of feature can cause interference. Better
           to let the caller do the retry if they want.

04/14/2019 Simplified the implementation and semantics of cancellation control.
           The enable_cancellation() function has been removed.  It is now
           only possible to disable cancellation.  Nesting is still allowed.
           Pending cancellation exceptions are raised on the first blocking
           call executed when reenabled.  The check_cancellation() function 
           can be used to explicitly check for cancellation as before.
           
03/09/2019 Fixed a bug in network.open_connection() that was passing arguments
           incorrectly.  Issue #291.
