@@ -13,8 +13,8 @@ from .network import *
 from .file import *
 from .channel import *
 from .bridge import *
-from .promise import *
 from .thread import *
+from .promise import *
 
 __all__ = [*errors.__all__,
            *task.__all__,
@@ -27,6 +27,5 @@ __all__ = [*errors.__all__,
            *file.__all__,
            *channel.__all__,
            *bridge.__all__,
-           *promise.__all__,
            *thread.__all__,
            ]
